--- a/public/add_friend.html
+++ b/public/add_friend.html
@@ -1,12 +1,10 @@
-<!-- public/index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Application</title>
+    <title>Add Friend - ioChatApp</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -17,12 +15,27 @@
             color: #9198a1;
         }
 
-        .app-name {
-            height: 80vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        .add-friend-form {
+            max-width: 400px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #0d1117;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        label {
             color: #9198a1;
+        }
+
+        .btn-primary {
+            background-color: #9198a1;
+            border: none;
+            color: #0d1117;
+        }
+
+        .btn-primary:hover {
+            background-color: #7a828e;
         }
 
         footer {
@@ -43,7 +56,7 @@
     <!-- Navbar -->
     <nav style="background-color: #0d1117;" class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a style="color: #9198a1;" class="navbar-brand" href="#">ioChatApp</a>
+            <a style="color: #9198a1;" class="navbar-brand" href="/">ioChatApp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -61,9 +74,18 @@
         </div>
     </nav>
 
-    <!-- Application Name Section -->
-    <div class="app-name">
-        <h1 >Welcome to ioChatApp</h1>
+    <!-- Add Friend Form -->
+    <div class="add-friend-form">
+        <h2 class="text-center">Find a Friend</h2>
+        <form action="/add_friend" method="POST">
+            <div class="mb-3">
+                <label for="friend-username" class="form-label">Friend's Username</label>
+                <input type="text" class="form-control" id="friend-username" name="friend_username" required>
+            </div>
+            <div class="d-grid">
+                <button type="submit" class="btn btn-primary">Search</button>
+            </div>
+        </form>
     </div>
 
     <!-- Footer -->
