--- a/public/login.html
+++ b/public/login.html
@@ -91,6 +91,9 @@
             <div class="d-grid">
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
+            <div id="error-id">
+                <p id="error-message" style="text-align: center;"></p>
+            </div>
         </form>
     </div>
 
@@ -101,6 +104,38 @@
 
     <!-- Bootstrap JS (Optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./javascripts/login.js"></script>
+    <!-- <script>
+        async function handleLogin(event) {
+                event.preventDefault();
+                const username = document.getElementById('username').value;
+                const password = document.getElementById('password').value;
+
+                try {
+                    const response = await fetch('/login', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({ username, password }),
+                    });
+
+                    const data = await response.json();
+                    if (data) {
+                        console.log('Login successful:', data.message);
+                        window.location.href = '/private_chat.html';
+                    } else {
+                        console.error('Login failed:', data.error);
+                        document.getElementById('error-message').textContent = data.error;
+                    }
+                } catch (error) {
+                    console.error('Login error:', error);
+                    document.getElementById('error-message').textContent = 'An error occurred. Please try again.';
+                }
+            }
+
+            document.querySelector('.login-form').addEventListener('submit', handleLogin);
+    </script> -->
 </body>
 
 </html>
