--- a/public/add_friend.html
+++ b/public/add_friend.html
@@ -1,3 +1,4 @@
+<!-- /public/add_friend.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -52,7 +53,6 @@
 </head>
 
 <body>
-
     <!-- Navbar -->
     <nav style="background-color: #0d1117;" class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -74,27 +74,32 @@
         </div>
     </nav>
 
+    <aside id="username"></aside>
     <!-- Add Friend Form -->
     <div class="add-friend-form">
         <h2 class="text-center">Find a Friend</h2>
         <form action="/add_friend" method="POST">
             <div class="mb-3">
                 <label for="friend-username" class="form-label">Friend's Username</label>
-                <input type="text" class="form-control" id="friend-username" name="friend_username" required>
+                <input type="search" class="form-control" id="friend-username" name="friend_username" required>
             </div>
             <div class="d-grid">
                 <button type="submit" class="btn btn-primary">Search</button>
+            </div>
+            <div id="error-id">
+                <p id="error-message" style="text-align: center;"></p>
             </div>
         </form>
     </div>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 ChatApp. All rights reserved.</p>
+        <p>&copy; 2024 ioChatApp. All rights reserved.</p>
     </footer>
 
     <!-- Bootstrap JS (Optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="./javascripts/add_friend.js"></script>
 
+</body>
 </html>
