--- a/public/login.html
+++ b/public/login.html
@@ -81,12 +81,12 @@
         <h2 class="text-center">Login</h2>
         <form action="/login" method="POST">
             <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" required>
+                <label for="username" class="form-label" autoc>Username</label>
+                <input type="text" class="form-control" id="username" name="username" autocomplete="username" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" required>
+                <input type="password" class="form-control" id="password" name="password" autocomplete="current-password" required>
             </div>
             <div class="d-grid">
                 <button type="submit" class="btn btn-primary">Login</button>
@@ -105,37 +105,7 @@
     <!-- Bootstrap JS (Optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./javascripts/login.js"></script>
-    <!-- <script>
-        async function handleLogin(event) {
-                event.preventDefault();
-                const username = document.getElementById('username').value;
-                const password = document.getElementById('password').value;
 
-                try {
-                    const response = await fetch('/login', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json',
-                        },
-                        body: JSON.stringify({ username, password }),
-                    });
-
-                    const data = await response.json();
-                    if (data) {
-                        console.log('Login successful:', data.message);
-                        window.location.href = '/private_chat.html';
-                    } else {
-                        console.error('Login failed:', data.error);
-                        document.getElementById('error-message').textContent = data.error;
-                    }
-                } catch (error) {
-                    console.error('Login error:', error);
-                    document.getElementById('error-message').textContent = 'An error occurred. Please try again.';
-                }
-            }
-
-            document.querySelector('.login-form').addEventListener('submit', handleLogin);
-    </script> -->
 </body>
 
 </html>
