--- a/public/login.html
+++ b/public/login.html
@@ -92,7 +92,7 @@
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
             <div id="error-id">
-                <p id="error-message" style="text-align: center;"></p>
+                <p style="color: red;" id="error-message" style="text-align: center;"></p>
             </div>
         </form>
     </div>
@@ -104,7 +104,7 @@
 
     <!-- Bootstrap JS (Optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./javascripts/login.js"></script>
+    <script src="/javascripts/login.js"></script>
 
 </body>
 
