--- a/public/signup.html
+++ b/public/signup.html
@@ -9,57 +9,16 @@
     <title>Sign Up - ioChatApp</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body,
-        html {
-            height: 100%;
-            background-color: #010409;
-            color: #9198a1;
-            overflow-y: auto;
-        }
-
-        .signup-form {
-            max-width: 500px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #0d1117;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        label {
-            color: #9198a1;
-        }
-
-        .btn-primary {
-            background-color: #9198a1;
-            border: none;
-            color: #0d1117;
-        }
-
-        .btn-primary:hover {
-            background-color: #7a828e;
-        }
-
-        footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: 60px;
-            text-align: center;
-            padding: 10px 0;
-            background-color: #9198a1;
-            color: #0d1117;
-        }
-    </style>
+    <!-- External Stylesheet -->
+    <link rel="stylesheet" href="/public/stylesheets/style.css">
 </head>
 
 <body>
 
     <!-- Navbar -->
-    <nav style="background-color: #0d1117;" class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg custom-navbar">
         <div class="container-fluid">
-            <a style="color: #9198a1;" class="navbar-brand" href="/">ioChatApp</a>
+            <a class="navbar-brand" href="/">ioChatApp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -67,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a style="color: #9198a1;" class="nav-link" href="/signup">Sign Up</a>
+                        <a class="nav-link" href="/signup">Sign Up</a>
                     </li>
                     <li class="nav-item">
-                        <a style="color: #9198a1;" class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" href="/login">Login</a>
                     </li>
                 </ul>
             </div>
@@ -83,7 +42,8 @@
         <form action="/signup" method="POST">
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" required>
+                <input type="text" class="form-control" id="username" name="username" minlength="3" maxlength="25"
+                    required>
             </div>
             <div class="mb-3">
                 <label for="sex" class="form-label">Sex</label>
@@ -94,21 +54,21 @@
                     <option value="other">Other</option>
                 </select>
             </div>
-            <!-- <div class="mb-3">
-                <label for="country" class="form-label">Country</label>
-                <input type="text" class="form-control" id="country" name="country" required>
-            </div> -->
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" required>
+                <input type="password" class="form-control" id="password" name="password" minlength="6" maxlength="15"
+                    required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Confirm Password</label>
-                <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
+                <input type="password" class="form-control" id="confirm_password" name="confirm_password" minlength="6"
+                    maxlength="15" required>
             </div>
-          
             <div class="d-grid">
                 <button type="submit" class="btn btn-primary">Sign Up</button>
+            </div>
+            <div class="text-center" id="error-id">
+                <p id="error-message" class="text-danger"></p>
             </div>
         </form>
     </div>
@@ -120,6 +80,8 @@
 
     <!-- Bootstrap JS (Optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/javascripts/signup.js"></script>
+
 </body>
 
 </html>
