--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!-- public/index.html -->
+<!-- /public/index.html -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -25,15 +25,50 @@
             color: #9198a1;
         }
 
+        .app-name h1 {
+            transition: text-shadow 0.3s ease;
+        }
+
+        .app-name h1:hover {
+            text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #ffffff, 0 0 40px #ff00ff, 0 0 70px #ff00ff;
+        }
+
         footer {
-            position: absolute;
+            position: relative;
             bottom: 0;
             width: 100%;
-            height: 60px;
+            height: auto;
             text-align: center;
             padding: 10px 0;
             background-color: #9198a1;
             color: #0d1117;
+        }
+
+        .navbar-nav .nav-link {
+            transition: text-shadow 0.3s ease;
+        }
+
+        .navbar-nav .nav-link:hover {
+            text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff, 0 0 15px #ffffff, 0 0 20px #ff00ff;
+        }
+
+        .feature-icon {
+            font-size: 50px;
+            color: #ff00ff;
+        }
+
+        .feature {
+            transition: transform 0.3s;
+        }
+
+        .feature:hover {
+            transform: scale(1.05);
+        }
+
+        .testimonial {
+            background-color: #0d1117;
+            padding: 20px;
+            border-radius: 5px;
         }
     </style>
 </head>
@@ -61,9 +96,56 @@
         </div>
     </nav>
 
-    <!-- Application Name Section -->
+    <!-- Hero Section -->
     <div class="app-name">
-        <h1 >Welcome to ioChatApp</h1>
+        <h1>Welcome to ioChatApp</h1>
+    </div>
+
+    <!-- Features Section -->
+    <div class="container text-center my-5">
+        <h2 class="text-light">Features</h2>
+        <div class="row">
+            <div class="col-md-4 feature">
+                <div class="feature-icon">💬</div>
+                <h3>Real-Time Messaging</h3>
+                <p>Chat instantly with friends and family in real time.</p>
+            </div>
+            <div class="col-md-4 feature">
+                <div class="feature-icon">🔒</div>
+                <h3>Secure</h3>
+                <p>Your conversations are encrypted and private.</p>
+            </div>
+            <div class="col-md-4 feature">
+                <div class="feature-icon">📱</div>
+                <h3>Mobile Friendly</h3>
+                <p>Access your chats from anywhere on any device.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Call to Action -->
+    <div class="text-center my-5">
+        <h2 class="text-light">Join Us Today!</h2>
+        <a href="/signup" class="btn btn-primary btn-lg">Sign Up Now</a>
+    </div>
+
+    <!-- Testimonials Section -->
+    <div class="container my-5">
+        <h2 class="text-light text-center">What Our Users Say</h2>
+        <div class="row">
+            <div class="col-md-4 testimonial">
+                <p>"ioChatApp has transformed the way I communicate with my friends!"</p>
+                <cite>- Alex</cite>
+            </div>
+            <div class="col-md-4 testimonial">
+                <p>"I love the security features. I feel safe chatting here."</p>
+                <cite>- Jamie</cite>
+            </div>
+            <div class="col-md-4 testimonial">
+                <p>"The mobile experience is fantastic! I can chat on the go."</p>
+                <cite>- Taylor</cite>
+            </div>
+        </div>
     </div>
 
     <!-- Footer -->
