--- a/public/login.html
+++ b/public/login.html
@@ -82,16 +82,16 @@
         <form action="/login" method="POST">
             <div class="mb-3">
                 <label for="username" class="form-label" autoc>Username</label>
-                <input type="text" class="form-control" id="username" name="username" autocomplete="username" required>
+                <input type="text" class="form-control" id="username" name="username" autocomplete="username" minlength="3" maxlength="25" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" autocomplete="current-password" required>
+                <input type="password" class="form-control" id="password" name="password" autocomplete="current-password" minlength="6" maxlength="15" required>
             </div>
             <div class="d-grid">
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
-            <div id="error-id">
+            <div class="text-center" id="error-id">
                 <p style="color: red;" id="error-message" style="text-align: center;"></p>
             </div>
         </form>
@@ -99,13 +99,11 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 ChatApp. All rights reserved.</p>
+        <p>&copy; 2024 ioChatApp. All rights reserved.</p>
     </footer>
 
     <!-- Bootstrap JS (Optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/javascripts/login.js"></script>
-
 </body>
-
 </html>
