--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Application</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -16,60 +17,7 @@
             background-color: #010409;
             color: #9198a1;
         }
-
-        .app-name {
-            height: 80vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #9198a1;
-        }
-
-        .app-name h1 {
-            transition: text-shadow 0.3s ease;
-        }
-
-        .app-name h1:hover {
-            text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 30px #ffffff, 0 0 40px #ff00ff, 0 0 70px #ff00ff;
-        }
-
-        footer {
-            position: relative;
-            bottom: 0;
-            width: 100%;
-            height: auto;
-            text-align: center;
-            padding: 10px 0;
-            background-color: #9198a1;
-            color: #0d1117;
-        }
-
-        .navbar-nav .nav-link {
-            transition: text-shadow 0.3s ease;
-        }
-
-        .navbar-nav .nav-link:hover {
-            text-shadow: 0 0 5px #ffffff, 0 0 10px #ffffff, 0 0 15px #ffffff, 0 0 20px #ff00ff;
-        }
-
-        .feature-icon {
-            font-size: 50px;
-            color: #ff00ff;
-        }
-
-        .feature {
-            transition: transform 0.3s;
-        }
-
-        .feature:hover {
-            transform: scale(1.05);
-        }
-
-        .testimonial {
-            background-color: #0d1117;
-            padding: 20px;
-            border-radius: 5px;
-        }
+       
     </style>
 </head>
 
@@ -102,7 +50,7 @@
     </div>
 
     <!-- Features Section -->
-    <div class="container text-center my-5">
+    <div class="container text-center my-3">
         <h2 class="text-light">Features</h2>
         <div class="row">
             <div class="col-md-4 feature">
@@ -130,7 +78,7 @@
     </div>
 
     <!-- Testimonials Section -->
-    <div class="container my-5">
+    <div class="container my-3">
         <h2 class="text-light text-center">What Our Users Say</h2>
         <div class="row">
             <div class="col-md-4 testimonial">
@@ -139,11 +87,11 @@
             </div>
             <div class="col-md-4 testimonial">
                 <p>"I love the security features. I feel safe chatting here."</p>
-                <cite>- Jamie</cite>
+                <cite>- Emeka</cite>
             </div>
             <div class="col-md-4 testimonial">
                 <p>"The mobile experience is fantastic! I can chat on the go."</p>
-                <cite>- Taylor</cite>
+                <cite>- Bola</cite>
             </div>
         </div>
     </div>
