--- a/public/login.html
+++ b/public/login.html
@@ -7,48 +7,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - ioChatApp</title>
+    <link rel="stylesheet" href="./stylesheets/style.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body,
         html {
-            height: 100%;
             background-color: #010409;
             color: #9198a1;
-        }
-
-        .login-form {
-            max-width: 400px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #0d1117;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        label {
-            color: #9198a1;
-        }
-
-        .btn-primary {
-            background-color: #9198a1;
-            border: none;
-            color: #0d1117;
-        }
-
-        .btn-primary:hover {
-            background-color: #7a828e;
-        }
-
-        footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: 60px;
-            text-align: center;
-            padding: 10px 0;
-            background-color: #9198a1;
-            color: #0d1117;
         }
     </style>
 </head>
@@ -98,7 +64,7 @@
     </div>
 
     <!-- Footer -->
-    <footer>
+    <footer id="login-footer">
         <p>&copy; 2024 ioChatApp. All rights reserved.</p>
     </footer>
 
