--- a/public/signup.html
+++ b/public/signup.html
@@ -12,40 +12,9 @@
     <style>
         body,
         html {
-            height: 100%;
-            background-color: #010409;
-            color: #9198a1;
             overflow-y: auto;
         }
-        .signup-form {
-            max-width: 500px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #0d1117;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        label {
-            color: #9198a1;
-        }
-        .btn-primary {
-            background-color: #9198a1;
-            border: none;
-            color: #0d1117;
-        }
-        .btn-primary:hover {
-            background-color: #7a828e;
-        }
-        footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: 60px;
-            text-align: center;
-            padding: 10px 0;
-            background-color: #9198a1;
-            color: #0d1117;
-        }
+        
     </style>
     <!-- External Stylesheet -->
     <link rel="stylesheet" href="/stylesheets/style.css">
@@ -113,7 +82,7 @@
     </div>
 
     <!-- Footer -->
-    <footer>
+    <footer id="signup-footer">
         <p>&copy; 2024 ioChatApp. All rights reserved.</p>
     </footer>`
 
