--- a/public/signup.html
+++ b/public/signup.html
@@ -90,3 +90,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/javascripts/signup.js"></script>
 </body>
+</html>
