edited the logout href in nav bar

--- a/public/login.html
+++ b/public/login.html
@@ -34,8 +34,8 @@
                     <li class="nav-item">
                         <a style="color: #9198a1;" class="nav-link" href="/signup">Sign Up</a>
                     </li>
-                    <li class="nav-item">
-                        <a style="color: #9198a1;" class="nav-link" href="/logout">Logout</a>
+                     <li class="nav-item">
+                        <a style="color: #9198a1;" class="logout-button nav-link" href="/logout">Logout</a>
                     </li>
                 </ul>
             </div>
