--- a/public/add_friend.html
+++ b/public/add_friend.html
@@ -67,7 +67,7 @@
                         <a style="color: #9198a1;" class="nav-link" href="/signup">Sign Up</a>
                     </li>
                     <li class="nav-item">
-                        <a style="color: #9198a1;" class="nav-link" href="/login">Login</a>
+                        <a style="color: #9198a1;" class=" logout-button nav-link" href="/logout">Logout</a>
                     </li>
                 </ul>
             </div>
