--- a/public/login.html
+++ b/public/login.html
@@ -45,7 +45,7 @@
     <!-- Login Form -->
     <div class="login-form">
         <h2 class="text-center">Login</h2>
-        <form action="/login" method="POST">
+        <form>
             <div class="mb-3">
                 <label for="username" class="form-label" autoc>Username</label>
                 <input type="text" class="form-control" id="username" name="username" autocomplete="username" minlength="3" maxlength="25" required>
