--- a/public/signup.html
+++ b/public/signup.html
@@ -36,7 +36,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div style="color: red" class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a style="color: #9198a1" class="nav-link" href="/signup">Sign Up</a>
