--- a/public/signup.html
+++ b/public/signup.html
@@ -134,6 +134,17 @@
           </select>
         </div>
         <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+            <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="email"
+            minlength="3"
+            required
+          />
+        </div>
+        <div class="mb-3">
           <label for="password" class="form-label">Password</label>
           <input
             type="password"
