added email features for friend request features

--- a/public/add_friend.html
+++ b/public/add_friend.html
@@ -81,7 +81,7 @@
         <form action="/add_friend" method="POST">
             <div class="mb-3">
                 <label for="friend-username" class="form-label">Friend's Username</label>
-                <input type="search" class="form-control" id="friend-username" name="friend_username" required>
+                <input type="search" class="form-control" id="friend-username" name="friend-username" required>
             </div>
             <div class="d-grid">
                 <button type="submit" class="btn btn-primary">Search</button>
