removed obsolete files and improved unique code security

--- a/public/signup.html
+++ b/public/signup.html
@@ -178,7 +178,7 @@
     </div>
 
     <!-- Footer -->
-    <footer id="signup-footer">
+    <footer>
       <p>&copy; 2024 ioChatApp. All rights reserved.</p>
     </footer>
 
