--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
       </div>
     </nav>
 
-     <!-- Modal -->
+    <!-- Modal -->
     <div
       class="modal fade"
       id="exampleModal"
@@ -89,10 +89,18 @@
             <ol>
               <li>Sign up and login</li>
               <li>Add a friend registered on ioChatApp</li>
-              <li>A unique code will be generated with your friend's username appended to it</li>
-              <li>Send the code and your username to the friend as a handshake request</li>
-              <li>Your friend accepts the handshake by adding your username</li>
-              <li>Your friend adds your handshake</li>
+              <li>
+                For first timers, a friend request will be sent to the email of
+                the username
+              </li>
+              <li>
+                This email contains your username and unique secret code between
+                you and Friend
+              </li>
+              <li>
+                The friend will accept the request by copying the code and your
+                username and adding you
+              </li>
               <li>Click "Chat" to start a conversation</li>
               <li>You can now send messages back and forth</li>
             </ol>
@@ -109,7 +117,6 @@
         </div>
       </div>
     </div>
-
 
     <!-- Hero Section -->
     <div class="app-name">
